Fix: z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,7 @@ a:hover {
   margin-top: 20px;
 }
 .navbar {
-  z-index: 0 !important;
+  z-index: 10 !important;
 }
 .navbar-light > a:hover {
   background: #f5f5f5 !important;
